# pyezgame

./: .gitignore  CMakeLists.txt  README.en.md  README.md  flow.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml
clib/: GameLib.SDL.h  GameLib.h  README.en.md  README.md  SDL2PORT.md
clib/assets/: sprites.md
clib/docs/: GameLib.SDL.md  GameLib.md  cheatsheet.html  notes.md  quickref.md
clib/examples/: 01_hello.cpp  02_movement.cpp  03_shapes.cpp  04_paint.cpp  05_sprites.cpp  07_shooting.cpp  08_breakout.cpp  09_snake.cpp  10_tilemap.cpp  11_font_text.cpp  12_sprite_transform.cpp  13_clip_rect.cpp  14_space_shooter.cpp  15_ui_controls.cpp  Makefile  demo_sdl.cpp  demo_win.cpp
clib/tests/: demo1.cpp  demo_scene_save.cpp  sdldemo1.cpp
examples/: 01_hello.py  02_movement.py  03_shapes.py  04_paint.py  05_sprites.py  06_sound.py  07_shooting.py  08_breakout.py  09_snake.py  10_tilemap.py  11_font_text.py  12_sprite_transform.py  13_clip_rect.py  14_space_shooter.py  15_ui_controls.py  16_conway.py  17_tetris.py  18_magic_tower.py
examples/assets/tileset/: README.txt
gameui/: __init__.py  __init__.pyi  cli.py
pyezgame/: __init__.py  __init__.pyi  _utils.py  cli.py  utils.py
scripts/: install.sh
src/: bindings.cpp
tests/: test_api_coverage.py  test_gameui.py  test_pyezgame.py
