[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "pyezgame"
version = "0.2.3"
description = "Python bindings for GameLib - a beginner-friendly game development library"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ezgame = "pyezgame.cli:main"

[project.optional-dependencies]
test = [
    "pysnooper>=1.2.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "tox-uv>=1.13.1",
    "tox>=4.25.0",
]
dev = ["bitool>=0.1.19", "hatch>=1.14.2"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pyezgame"]
wheel.py-api = "cp38"

[tool.basedpyright]
exclude = ["**/.git", "**/.venv", "**/__pycache__", "**/build", "**/dist"]
include = ["src"]
pythonVersion = "3.8"
reportImplicitStringConcatenation = "error"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "warning"
typeCheckingMode = "recommended"

[dependency-groups]
dev = ["pyezgame[test]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux_*", "*-manylinux_i686", "*-win32", "pp*"]
test-requires = "pytest"
test-command = "pytest {project}/tests -x --timeout=30"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y epel-release && dnf install -y SDL2-devel SDL2_image-devel SDL2_ttf-devel SDL2_mixer-devel"

[tool.cibuildwheel.macos]
before-all = "brew install sdl2 sdl2_image sdl2_ttf sdl2_mixer"

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py38"
unsafe-fixes = true

[tool.ruff.lint]
select = [
    # 核心
    "B",
    "C4",
    # 更简洁的推导式写法
    "E",
    "F",
    "I",
    "PERF", # 性能优化提示
    "SIM",  # 简化不必要的复杂代码
    "T10",  # 禁止调试代码提交 (如 pdb)
    "T20",  # 在生产代码中禁止/警告 print
    "TRY",  # 更好的异常处理实践
    "UP",   # 提示使用新语法（对3.8+项目友好）
    # 新增 - 代码清晰度
    # "A",
    "COM",
    # "ERA",
    # "FBT",
    # # 新增 - 类型安全
    "ANN",
    # "BLE",
    # "RUF",
    # "SLOT",
    # # 新增 - 导入规范
    # #"TID",
    # #"ICN",
    # # 新增 - 安全
    # "DTZ",
    # "LOG",
    # "S",
    # 新增 - 命名
    # "N"
]
