[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyezgame"
version = "0.4.4"
description = "Python bindings for GameLib - a beginner-friendly game development library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ezgame = "pyezgame.cli:main"

[project.optional-dependencies]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
]
dev = [
    "hatch>=1.14.2",
    "nanobind>=2.0",
    "scikit-build-core>=0.12.2",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pyezgame"]
wheel.py-api = "cp312"
build.verbose = true
sdist.exclude = [
    "wheelhouse",
    ".github",
    ".tox",
    ".venv",
    ".benchmarks",
    ".pytest_cache",
    ".vscode",
    "dist",
    "build",
    "scripts",
    "flow.yml",
    "tox.ini",
    "uv.lock",
    "clib/docs",
    "clib/tests",
    "clib/examples",
]

[tool.basedpyright]
exclude = ["**/.git", "**/.venv", "**/__pycache__", "**/build", "**/dist"]
include = ["pyezgame", "src"]
pythonVersion = "3.9"
reportImplicitStringConcatenation = "error"
reportMissingTypeStubs = "none"
reportUnusedCallResult = "warning"
typeCheckingMode = "recommended"

[dependency-groups]
dev = ["pyezgame[dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--import-mode=importlib"
markers = ["slow: tests that require a display or take a long time"]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "*-manylinux_i686", "*-win32"]
test-requires = ["pytest", "pytest-asyncio", "pytest-xdist"]
test-command = "cd /tmp && pytest {project}/tests -x"
test-skip = "cp39-* cp310-* cp311-*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y epel-release && dnf config-manager --set-enabled powertools || dnf config-manager --set-enabled crb || true && dnf install -y SDL2-devel SDL2_image-devel SDL2_ttf-devel SDL2_mixer-devel"

[tool.cibuildwheel.macos]
before-all = "export HOMEBREW_NO_REQUIRE_TAP_TRUST=1 && brew install sdl2 sdl2_image sdl2_ttf sdl2_mixer"

[tool.cibuildwheel.windows]
test-command = "cd %TEMP% && pytest {project}/tests -x"

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py39"
unsafe-fixes = true
extend-exclude = ["clib"]

[tool.ruff.lint]
select = [
    "ANN",  # 类型注解
    "B",    # bugbear 常见错误
    "C4",   # 推导式写法
    "COM",  # 尾随逗号
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PERF", # 性能优化
    "SIM",  # 简化代码
    "T10",  # 禁止 pdb 调试
    "T20",  # 禁止 print
    "TRY",  # 异常处理实践
    "UP",   # 新语法提示
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]           # 测试中允许 assert
"examples/**" = ["T201", "ANN"] # 示例中允许 print 和省略类型注解
